<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/main">
        <menu>

            <item android:title="@string/home"
                android:id="@+id/nav_header_home"
                android:icon="@mipmap/ic_nav_home"/>

            <item android:title="@string/store_locator"
                android:id="@+id/nav_header_store_header"
                android:icon="@mipmap/ic_nav_view_product"/>

            <item android:title="@string/online_shop"
                android:id="@+id/nav_header_online_shop"
                android:icon="@mipmap/ic_nav_shops"/>

            <item android:title="@string/switch_as_a_dealer"
                android:id="@+id/nav_header_switch_as_a_dealer"
                android:icon="@mipmap/ic_nav_user"/>
        </menu>
    </item>
    <item android:title="@string/others">
        <menu>
            <item android:title="@string/settings"
                android:id="@+id/nav_header_settings"
                android:icon="@mipmap/ic_nav_settings"/>

            <item android:title="@string/profile"
                android:id="@+id/nav_header_profile"
                android:icon="@mipmap/ic_nav_profile"/>

            <item android:title="@string/log_out"
                android:id="@+id/nav_header_logout"
                android:icon="@mipmap/ic_nav_logout"/>
        </menu>
    </item>
</menu>