<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ededed"
    android:layout_margin="5sp"
    android:padding="7sp"
    android:baselineAligned="false">

    <RelativeLayout
        android:layout_width="0sp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="10sp">

        <ImageView
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_cart"
            android:contentDescription="@string/shop_online"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0sp"
        android:layout_height="match_parent"
        android:layout_weight="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/product_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:id="@+id/text_view_view_products_product_name"
            android:textStyle="italic"
            android:padding="5sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_view_products_product_name"
            android:text="@string/shop_name_or_owner_name"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:id="@+id/text_view_view_products_owner_name"
            android:padding="5sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_view_products_owner_name"
            android:text="@string/price"
            android:padding="5sp"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:id="@+id/text_view_view_products_show_price"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/text_view_view_products_show_price"
            android:layout_toRightOf="@+id/text_view_view_products_show_price"
            android:layout_toEndOf="@+id/text_view_view_products_show_price"
            android:text="@string/dummy_price"
            android:padding="5sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:id="@+id/text_view_view_products_price"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:padding="5sp"
            android:textStyle="bold"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_alignTop="@+id/text_view_view_products_price"
            android:layout_toRightOf="@+id/text_view_view_products_price"
            android:layout_toEndOf="@+id/text_view_view_products_price"
            android:id="@+id/text_view_view_show_rating"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/text_view_view_show_rating"
            android:layout_toRightOf="@+id/text_view_view_show_rating"
            android:layout_toEndOf="@+id/text_view_view_show_rating"
            android:text="@string/_4_0"
            android:padding="5sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:id="@+id/text_view_view_rating"/>

    </RelativeLayout>

</LinearLayout>