<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_curved_layout"
    android:layout_margin="5sp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="@string/product_name"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:id="@+id/text_view_news_feed_product_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginStart="20sp"
        android:text="@string/shop_name_or_owner_name"
        android:textSize="15sp"
        android:textStyle="italic"
        android:id="@+id/text_view_news_feed_shop_name"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/view_product"
            android:scaleType="centerInside"
            android:layout_margin="5sp"
            android:src="@drawable/sample_newsfeed1"
            android:id="@+id/image_view_news_feed_product"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7sp">

        <ImageView
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:src="@drawable/ic_like_button"
            android:layout_marginLeft="15sp"
            android:layout_marginStart="15sp"
            android:contentDescription="@string/like"
            android:id="@+id/image_view_news_feed_like_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:layout_toRightOf="@+id/image_view_news_feed_like_button"
            android:layout_toEndOf="@id/image_view_news_feed_like_button"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:id="@+id/text_view_news_feed_like_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/like"
            android:layout_toRightOf="@id/text_view_news_feed_like_button"
            android:layout_toEndOf="@id/text_view_news_feed_like_button"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:layout_marginLeft="10sp"
            android:layout_marginStart="10sp"
            android:textColor="@android:color/black"/>
    </RelativeLayout>
</LinearLayout>