<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mentor.mentor.Fragment_profile"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="3">
        <ImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:contentDescription="@string/profile"
            android:src="@mipmap/ic_default_profile_pic"
            android:id="@+id/image_view_profile_picture"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/profile_username_layout"
        android:layout_weight="1">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/username"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/profile_email_id_layout"
        android:layout_weight="1">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email_id"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/email_id"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/profile_phone_no_layout"
        android:layout_weight="1">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone_number"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/phone_number"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/profile_city_layout"
        android:layout_weight="1">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/city"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/city_name"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/profile_state_layout"
        android:layout_weight="1">

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/state"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/state"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_change_password_layout"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:background="#12000000"
            android:layout_margin="10sp"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>
