<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile_finish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_signup"
    tools:context="com.mentor.mentor.Profile_finish"
    android:rowCount="5"
    android:columnCount="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_marginTop="30sp"
            android:src="@mipmap/ic_default_profile_pic"
            android:contentDescription="@string/upload_image"
            android:id="@+id/image_view_profile_finish"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_profile_picture"
            android:background="@android:color/darker_gray"
            android:textColor="@android:color/white"
            android:padding="10sp"
            android:textSize="15sp"
            android:id="@+id/button_upload_profile_finish"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="choose_image"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_margin="10sp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:padding="20sp"
                android:textAlignment="center"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/city_name"
                android:id="@+id/edit_text_city_name"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:padding="20sp"
                android:background="#20d7d5d5"
                android:textAlignment="center"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:layout_margin="10sp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/state"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textAlignment="center"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="2">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/state_name"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:padding="20sp"
                android:background="#20d7d5d5"
                android:id="@+id/edit_text_state_name"
                android:textAlignment="center"/>
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed"
            android:background="#60ffffff"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:layout_margin="10sp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/button_profile_finish"
            android:onClick="go_to_access"/>
    </RelativeLayout>

</LinearLayout>
